# ticket2prompt

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json
.husky/: pre-push
api/: dependencies.py  exceptions.py  main.py
auth/: credentials.py  middleware.py  models.py  postgres_auth.py  security.py
config/: logging_config.py  settings.py
docs/: 01_project_overview.md  02_system_architecture.md  03_open_source_stack.md  04_repository_indexing.md  05_metadata_schema.md  06_retrieval_pipeline.md  07_prompt_generation.md  08_build_roadmap.md  09_repository_structure.md  10_qdrant_vector_schema.md  11_embedding_strategy.md  12_symbol_extraction_treesitter.md  13_code_knowledge_graph_design.md  14_hybrid_retrieval_engine.md  15_ranking_algorithm_spec.md  16_ticket_expansion_multiquery.md  17_context_compression_system.md  18_cursor_prompt_optimization.md  19_langgraph_workflow_design.md  20_monorepo_indexing_strategy.md  21_incremental_indexing_delta_updates.md  22_evaluation_retrieval_metrics.md  23_repository_scaffold.md  24_python_module_skeletons.md  25_database_schema_sql.md  26_qdrant_collection_setup.md  27_langgraph_workflow_code.md  28_fastapi_endpoints.md  29_local_development_setup.md  30_end_to_end_example_pipeline.md
evaluation/: __init__.py  dataset.py  e2e_runner.py  retrieval_metrics.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
git_analysis/: change_detector.py  commit_analyzer.py  ownership_mapper.py
indexing/: embedding_pipeline.py  file_filter.py  graph_builder.py  incremental_service.py  jira_indexer.py  module_detector.py  monorepo_indexer.py  (+2 more)
(+188 files in other folders)
